--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,28 @@
         android:theme="@style/Theme.StyleSpo"
         tools:targetApi="31">
         <activity
-            android:name=".NavigationBar"
-            android:exported="false"
-            android:label="@string/title_activity_navigation_bar" />
+            android:name=".Profile"
+            android:exported="false" />
+        <activity
+            android:name=".Discovery"
+            android:exported="false" />
+        <activity
+            android:name=".Add"
+            android:exported="false" />
+        <activity
+            android:name=".SettingsActivity"
+            android:exported="true"
+            android:label="Settings" />
+        <activity
+            android:name=".HomePage"
+            android:exported="true" />
+        <activity
+            android:name=".FirstFragment"
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
+            android:label="MainActivity"
             android:theme="@style/Theme.StyleSpo">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
