--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,11 +28,9 @@
         <activity
             android:name=".HomePage"
             android:exported="true" />
+
         <activity
-            android:name=".FirstFragment"
-            android:exported="true" />
-        <activity
-            android:name=".MainActivity"
+            android:name=".view.MainActivity"
             android:exported="true"
             android:label="MainActivity"
             android:theme="@style/Theme.StyleSpo">
@@ -42,6 +40,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
