When the user presses on someone else's profile picture, it takes it to their profile. If they press on their own, it goes to the profile fragment.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,10 @@
             android:exported="false"
             android:label="@string/title_activity_settings" />
         <activity
+            android:name=".view.UserProfileActivity"
+            android:exported="false"
+            android:label="@string/title_activity_settings" />
+        <activity
             android:name=".view.HomeActivity"
             android:exported="true"
             android:label="HomeActivity"
